tests/errors/dynamic-share.expect
---CODE---
1
---STDERR---
error: Cannot prove constraint |L - G| >= |L+3 - L|
   ┌─ tests/errors/dynamic-share.fil:13:3
   │
12 │   m1 := M<L>(c, d);
   │   ----------------- Invoke provides binding M.G=L
13 │   m0 := M<G>(a, b);
   │   ^^^^^^^^^^^^^^^^^ Conflicting invoke. Invoke provides binding M.G=G
   │
   = @interface for G specifies that invokes must be |L+3 - L| cycles apart

